[tool.poetry]
name = "control-any-sim"
version = "1.2.2"
description = "This is a mod for The Sims 4 by Maxis which allows the player to control any NPC character while playing."
authors = ["Jovan Gerodetti <jovan.gerodetti@titannano.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.7.2"

[tool.poetry.group.dev.dependencies]
decompyle3 = "^3.9.0"
pylint = "~2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
