[project]
name = "control-any-sim"
version = "1.2.4"
description = "This is a mod for The Sims 4 by Maxis which allows the player to control any NPC character while playing."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.7"

[[authors]]
name = "Jovan Gerodetti"
email = "jovan.gerodetti@titannano.de>"

[tool.rye]
dev-dependencies = [
    "ruff~=0.4.7",
    "decompyle3~=3.9.1",
    "pylint~=2.6.0",
]

[tool.pylint.MESSAGES]
disable="missing-docstring,broad-except,protected-access,R0903"
