[project]
name = "control-any-sim"
version = "1.2.6"
description = "This is a mod for The Sims 4 by Maxis which allows the player to control any NPC character while playing."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.7"

[[authors]]
name = "Jovan Gerodetti"
email = "jovan.gerodetti@titannano.de>"

[tool.rye]
dev-dependencies = [
    "ruff~=0.4.7",
    "decompyle3~=3.9.1",
    "pylint~=2.6.0",
    "python-lsp-server[rope]~=1.7.4",
    "pylsp-mypy~=0.6.7",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "BLE001", "TRY300", "D203", "D212"]

[tool.pylsp-mypy]
enabled = true
report_progress = true
dmypy = false
overrides = ["--disable-error-code", "import", true]


[tool.pylint.MESSAGES]
disable="missing-docstring,broad-except,protected-access,R0903"
